--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* Index page Cascading Style Sheet */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
