--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,42 @@
 /* App Cascading Style Sheet */
-.App {
+.app {
+  background-color: black;
+  align-items: center;
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 30vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 30s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-header { /* orig color #282c34 */
+  background: black;
+  min-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(8px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-toggle {
+  /* background: black; */
+  color: gold;
+  /* align-items: center;
+  justify-content: center;
+  background: darkgreen; */
 }
 
 @keyframes App-logo-spin {
