--- a/src/Components/Switch.css
+++ b/src/Components/Switch.css
@@ -1,7 +1,8 @@
 .react-switch-checkbox {
-    height: 0;
-    width: 0;
+    height: 0px;
+    width: 0px;
     visibility: hidden;
+    /* cursor: pointer; */
 }
 
 .react-switch-label {
@@ -11,21 +12,23 @@
     cursor: pointer;
     width: 100px;
     height: 50px;
-    background: black;
+    background: white;
+    color: gold;
     border-radius: 100px;
     position: relative;
-    transition: background-color  .3s;
+    transition: background-color  2s;
 }
 
 .react-switch-label .react-switch-button {
     content: '';
-    position: absolute;
+    position: absolute; /* absolute/center */
     top: 2px;
     left: 2px;
     width: 45px;
+    height: 45px;
     border-radius: 45px;
-    transition: 0.3s;
-    background: #fff;
+    transition: 2s;
+    color: white;
     box-shadow: 0 0 2px 0 rgba(10, 10, 0.29);
 }
 
