--- a/src/App.css
+++ b/src/App.css
@@ -33,11 +33,10 @@
 }
 
 .App-toggle {
-  /* background: black; */
+  background: black;
   color: gold;
-  /* align-items: center;
+  align-items: center;
   justify-content: center;
-  background: darkgreen; */
 }
 
 @keyframes App-logo-spin {
@@ -119,17 +118,35 @@ body {
 
 /* Main column */
 .main {
-  -ms-flex: 70%; /* IE10 */
-  flex: 70%;
+  -ms-flex: 60%; /* IE10 */
+  flex: 60%;
   background-color: white;
   padding: 20px;
 }
 
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
+/* Airborne images for this sample */
+.flightpicture {
+  background-color: darkgreen;
+  padding: 10px;
+  align-self: center;
   width: 100%;
+  height: 100%;
+}
+
+.show1pict {
+  background-color: #aaa;
   padding: 20px;
+  align-self: center;
+  width: 70%;
+  height: 40%;
+}
+
+.show2pict {
+  background-color: #aaa;
+  padding: 20px;
+  align-self: center;
+  width: 70%;
+  height: 40%;
 }
 
 /* Footer */
