--- a/src/Components/Switch.css
+++ b/src/Components/Switch.css
@@ -12,8 +12,8 @@
     cursor: pointer;
     width: 100px;
     height: 50px;
-    background: white;
-    color: gold;
+    background: darkblue;
+    color: darkblue;
     border-radius: 100px;
     position: relative;
     transition: background-color  2s;
@@ -28,7 +28,7 @@
     height: 45px;
     border-radius: 45px;
     transition: 2s;
-    color: white;
+    color: darkblue;
     box-shadow: 0 0 2px 0 rgba(10, 10, 0.29);
 }
 
